# res

./: .gitignore  README.md  core.py  dona_odete_app.py  dona_odete_functions.py  main.py  pyproject.toml  requirements.txt  sample.py
services/: coqui_tts.py  ollama_llm.py
